--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id "io.spring.develocity.conventions" version "0.0.22"
-	id "org.gradle.toolchains.foojay-resolver-convention" version "0.9.0"
+    id "io.spring.develocity.conventions" version "0.0.22"
+    id "org.gradle.toolchains.foojay-resolver-convention" version "0.9.0"
 }
 
 include "spring-aop"
@@ -32,22 +32,26 @@ include "framework-platform"
 include "integration-tests"
 
 rootProject.name = "spring"
-rootProject.children.each {project ->
-	project.buildFileName = "${project.name}.gradle"
+rootProject.children.each { project ->
+    project.buildFileName = "${project.name}.gradle"
 }
 
 settings.gradle.projectsLoaded {
-	develocity {
-		buildScan {
-			File buildDir = settings.gradle.rootProject
-					.getLayout().getBuildDirectory().getAsFile().get()
-			buildDir.mkdirs()
-			new File(buildDir, "build-scan-uri.txt").text = "(build scan not generated)"
-			buildScanPublished { scan ->
-				if (buildDir.exists()) {
-					new File(buildDir, "build-scan-uri.txt").text = "${scan.buildScanUri}\n"
-				}
-			}
-		}
-	}
+    develocity {
+        buildScan {
+            File buildDir = settings.gradle.rootProject
+                    .getLayout().getBuildDirectory().getAsFile().get()
+            buildDir.mkdirs()
+            new File(buildDir, "build-scan-uri.txt").text = "(build scan not generated)"
+            buildScanPublished { scan ->
+                if (buildDir.exists()) {
+                    new File(buildDir, "build-scan-uri.txt").text = "${scan.buildScanUri}\n"
+                }
+            }
+        }
+    }
 }
+
+include 'spring-study'
+include 'untitled'
+include 'spring-study'
